WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120543
warning: unused parameter ‘renderingMode' in ImageBufferCairo.cpp:94
https://bugs.webkit.org/show_bug.cgi?id=120543
Summary
warning: unused parameter ‘renderingMode' in ImageBufferCairo.cpp:94
Santosh Mahto
Reported
2013-08-30 12:11:54 PDT
‘renderingMode' should be guarded with UNUSED_PARAM()
Attachments
Patch
(1.50 KB, patch)
2013-08-30 12:25 PDT
,
Santosh Mahto
no flags
Details
Formatted Diff
Diff
patch for landing
(1.52 KB, patch)
2013-08-31 11:09 PDT
,
Santosh Mahto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Santosh Mahto
Comment 1
2013-08-30 12:25:45 PDT
Created
attachment 210146
[details]
Patch
Darin Adler
Comment 2
2013-08-30 12:30:29 PDT
Comment on
attachment 210146
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210146&action=review
> Source/WebCore/platform/graphics/cairo/ImageBufferCairo.cpp:106 > + UNUSED_PARAM(renderingMode);
I think ASSERT_UNUSED might be better here, since we know what value we support for rendering mode.
Santosh Mahto
Comment 3
2013-08-31 11:09:48 PDT
Created
attachment 210197
[details]
patch for landing
WebKit Commit Bot
Comment 4
2013-08-31 11:10:53 PDT
Comment on
attachment 210197
[details]
patch for landing Rejecting
attachment 210197
[details]
from commit-queue.
santosh.ma@samsung.com
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Commit Bot
Comment 5
2013-08-31 22:03:54 PDT
Comment on
attachment 210197
[details]
patch for landing Clearing flags on attachment: 210197 Committed
r154936
: <
http://trac.webkit.org/changeset/154936
>
WebKit Commit Bot
Comment 6
2013-08-31 22:03:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug