warning: unused parameter ‘renderingMode'  in ImageBufferCairo.cpp:94 https://bugs.webkit.org/show_bug.cgi?id=120543

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-08-31
Reviewed by Darin Adler.

Fixing warning by adding ASSERT_UNUSED.

* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::ImageBuffer::ImageBuffer):

Canonical link: https://commits.webkit.org/138562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154936 268f45cc-cd09-0410-ab3c-d52691b4dbfc